--- a/style.css
+++ b/style.css
@@ -30,10 +30,13 @@ nav {
 }
 
 /* Logo Styling */
+/* Logo Styling */
 .logo {
-    font-size: 2.3em;
-    font-weight: bold;
+    font-family: 'Dancing Script', cursive;
+    font-size: 2.5em;
+    font-weight: 700;
     color: #000000;
+    letter-spacing: 1px;
 }
 
 /* Navigation Links Styling */
